deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eap
  labels:
    app.kubernetes.io/name: eap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: eap
  ports:
    - name: http
      port: 80
      targetPort: http
